syntax = "proto3";

option csharp_namespace = "ChromaControl.Common.Protos.Lighting";

package chromacontrol.lighting;

service LightingGrpc {
    rpc RestartService(EmptyMessage) returns (EmptyMessage);
    rpc StreamEvents(EmptyMessage) returns (stream Event);
    rpc GetVendors(EmptyMessage) returns (VendorListResponse);
    rpc ToggleVendor(ToggleVendorRequest) returns (EmptyMessage);
    rpc GetDeviceGroups(EmptyMessage) returns (DeviceGroupsResponse);
    rpc GetGroupDevices(GetGroupDevicesRequest) returns (DevicesResponse);
    rpc GetDeviceInfo(GetDeviceInfoRequest) returns (DeviceInfoResponse);
    rpc GetDeviceZones(GetDeviceZonesRequest) returns (DeviceZonesResponse);
    rpc ResizeDeviceZone(ResizeDeviceZoneRequest) returns (EmptyMessage);
}

message EmptyMessage { }

enum EventType {
    DEVICES_UPDATED = 0;
}

message Event {
    EventType type = 1;
}

message Vendor {
    string name = 1;
    bool enabled = 2;
    bool dangerous = 3;
}

message VendorListResponse {
    repeated Vendor vendors = 1;
}

message ToggleVendorRequest {
    string name = 1;
    bool enabled = 2;
}

message DeviceGroup {
    string name = 1;
    string vendor = 2;
    string type = 3;
}

message DeviceGroupsResponse {
    repeated DeviceGroup groups = 1;
}

message GetGroupDevicesRequest {
    string groupName = 1;
}

message Device {
    int32 index = 1;
    string name = 2;
}

message DevicesResponse {
    repeated Device devices = 1;
}

message GetDeviceInfoRequest {
    int32 deviceIndex = 1;
}

message DeviceInfoResponse {
    int32 index = 1;
    string name = 2;
    string type = 3;
    string vendor = 4;
    string description = 5;
    string version = 6;
    string serial = 7;
    string location = 8;
}

message GetDeviceZonesRequest {
    int32 deviceIndex = 1;
}

message DeviceZone {
    int32 index = 1;
    string name = 2;
    int32 minimumLeds = 3;
    int32 maximumLeds = 4;
    int32 ledCount = 5;
}

message DeviceZonesResponse {
    repeated DeviceZone zones = 1;
}

message ResizeDeviceZoneRequest {
    int32 deviceIndex = 1;
    int32 zoneIndex = 2;
    int32 newSize = 3;
}
